--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: "OpenSans";
-    src: url(/assets/Open_Sans/static/OpenSans-Regular.ttf);
+    src: url(./assets/Open_Sans/static/OpenSans-Regular.ttf);
 }
