--- a/styles/theme.css
+++ b/styles/theme.css
@@ -14,6 +14,8 @@ body.light-mode {
     --button-background: rgb(235, 235, 235);
     --button-active-background-color: white;
     --button-text-color: black;
+
+    --bg-pulse: background-pulse-light 10s infinite;
 }
 
 body.dark-mode {
@@ -22,7 +24,7 @@ body.dark-mode {
     --text-shadow-color-2: rgb(255, 255, 255);
     --main-text-gradient: linear-gradient(90deg, #ffffff, #b8b8b8, #ffffff);
 
-    --background-gradient: linear-gradient(90deg, #000000, #252525, #000000);
+    --background-gradient: linear-gradient(90deg, #000000, #212121, #000000);
     --background-color: black;
     --border-color: white;
     --text-color: white;
@@ -32,4 +34,34 @@ body.dark-mode {
     --button-background: rgb(30, 30, 30);
     --button-active-background-color: black;
     --button-text-color: white;
+
+    --bg-pulse: background-pulse-dark 10s infinite;
+}
+
+@keyframes background-pulse-dark {
+    0% {
+        background-color: #000000;
+    }
+
+    50% {
+        background-color: rgb(17, 17, 17);
+    }
+
+    100% {
+        background-color: #000000;
+    }
+}
+
+@keyframes background-pulse-light {
+    0% {
+        background-color: #ffffff;
+    }
+
+    50% {
+        background-color: #a7a7a7;
+    }
+
+    100% {
+        background-color: #ffffff;
+    }
 }
